--- a/web/public/stylesheets/style.css
+++ b/web/public/stylesheets/style.css
@@ -1,8 +1,15 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+/* Custom background color */
+@import url("https://fonts.googleapis.com/css2?family=Cute+Font&family=Noto+Sans+KR&display=swap");
+.body-bg {
+  background-color: #f0f0f0; /* Replace with your desired color code */
 }
 
+* {
+  font-family: "Noto Sans KR", sans-serif;
+}
 a {
-  color: #00B7FF;
+  color: #00b7ff;
+}
+.navbar {
+  color: #fff;
 }
