--- a/web/public/stylesheets/style.css
+++ b/web/public/stylesheets/style.css
@@ -13,3 +13,10 @@ a {
 .navbar {
   color: #fff;
 }
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
