--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -18,7 +18,7 @@
     />
   </head>
   <body class="body-bg">
-    <div>
+    <div class="container">
       <%-include('header.ejs') %> <%-include(pageName) %>
       <%-include('footer.ejs') %>
     </div>
