--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -1,3 +1,9 @@
+<style>
+  #div_books img {
+    cursor: pointer;
+  }
+</style>
+
 <!-- Content -->
 <div class="my-5 row">
   <div class="col text-center container">
@@ -25,7 +31,7 @@
     <div class="col-6 col-md-4 col-lg-2 mb-2 ">
       <div class="card">
         <div class="card-body">
-          <img src="{{thumbnail}}">
+          <img src="{{thumbnail}}" width="90%" index="{{@index}}">
           <div class="ellipsis text-center">{{title}}</div>
         </div>
         <div class="card-footer">
@@ -33,6 +39,7 @@
         </div>
       </div>
     </div>
+    <%-include('books/modal.ejs')%>
   {{/each}}
 </script>
 <script>
@@ -40,6 +47,12 @@
   let query = $(frm.query).val();
   let page = 1;
 
+  //이미지 클릭했을 때
+  $("#div_books").on("click", "img", function () {
+    let index = $(this).attr("index");
+    // alert(index);
+    $("#modal" + index).modal("show");
+  });
   $(frm).on("submit", function (e) {
     e.preventDefault();
     page = 1;
@@ -62,13 +75,13 @@
       type: "GET",
       url: "https://dapi.kakao.com/v3/search/book?target=authors",
       headers: { Authorization: "KakaoAK a40b5b449d67f0fcf74b4a3bf9e4a072" },
-      data: { query: query, page: page, size: 10 },
+      data: { query: query, page: page, size: 12 },
       success: function (data) {
         console.log(data);
         let temp = Handlebars.compile($("#temp_books").html());
         $("#div_books").html(temp(data));
 
-        let last = Math.ceil(data.meta.pageable_count / 10);
+        let last = Math.ceil(data.meta.pageable_count / 12);
         $("#span_page").html(page + "/" + last);
 
         if (page == 1) $("#prev").attr("disabled", true);
