--- a/web/views/menu.ejs
+++ b/web/views/menu.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" style="color: #fff" href="/">HOME</a>
+    <a class="navbar-brand" href="/">HOME</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,24 +15,20 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a
-            class="nav-link active"
-            style="color: #fff"
-            aria-current="page"
-            href="/books"
+          <a class="nav-link active" aria-current="page" href="/books"
             >도서검색</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/locals"
+            >지역검색</a
           >
         </li>
       </ul>
       <ul class="navbar-nav d-flex">
+        <!-- d-flex : 우측 정렬 -->
         <li class="nav-item">
-          <a
-            class="nav-link active"
-            style="color: #fff"
-            aria-current="page"
-            href="#"
-            >LOGIN</a
-          >
+          <a class="nav-link active" aria-current="page" href="/login">LOGIN</a>
         </li>
       </ul>
     </div>
