--- a/web/views/menu.ejs
+++ b/web/views/menu.ejs
@@ -27,10 +27,45 @@
       </ul>
       <ul class="navbar-nav d-flex">
         <!-- d-flex : 우측 정렬 -->
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/login">LOGIN</a>
+        <li class="nav-item" id="login">
+          <a class="nav-link active" aria-current="page" href="/users/login"
+            >LOGIN</a
+          >
+        </li>
+        <li class="nav-item" id="email" style="display: none">
+          <a class="nav-link active" aria-current="page" href="/users/mypage"
+            >email</a
+          >
+        </li>
+        <li class="nav-item" id="logout" style="display: none">
+          <a class="nav-link active" aria-current="page" href="/users/logout"
+            >LOGOUT</a
+          >
         </li>
       </ul>
     </div>
   </div>
 </nav>
+<script>
+  // 로그인 로직
+  /*로그인 했을 때
+    1. id가 login인거 Toggle로 보임->안보임, id가 email인거 Toggle로 안보임->보임, id가 logout인거 Toggle로 안보임->보임
+    2. id가 email인거라벨에 세션의 email정보 불러와서 그 값을 넣어줌*/
+  /*로그아웃 했을 때
+    1. id가 login인거 Toggle로 보임->안보임, id가 email인거 Toggle로 안보임->보임, id가 logout인거 Toggle로 안보임->보임
+    2. 세션 클리어링
+    3. 다시 메인화면(/)으로 redirect*/
+  if (sessionStorage.getItem("email")) {
+    $("#login, #email, #logout").toggle();
+    $("#email a").html(sessionStorage.getItem("email"));
+  }
+  $("#logout").on("click", "a", function (e) {
+    e.preventDefault();
+    if (confirm("로그아웃하시겠습니까? 진심?")) {
+      sessionStorage.clear();
+      location.href = "/";
+    } else {
+      return;
+    }
+  });
+</script>
