--- a/web/views/books/search.ejs
+++ b/web/views/books/search.ejs
@@ -1,75 +1,111 @@
 <div class="row my-5">
   <div class="col">
-    <div class="row mb-3 justify-content-end">
-      <form name="frm" class="col-6 col-md-4 col-lg-3">
+    <h1 class="text-center mb-5">도서검색</h1>
+    <div class="row justify-content-end">
+      <form name="frm" class="col-6 col-lg-3 col-md-4">
         <div class="input-group">
-          <input name="query" class="form-control" type="text" value="자바" />
+          <input
+            class="form-control"
+            placeholder="검색어"
+            name="query"
+            value="자바 "
+          />
           <button class="btn btn-primary">검색</button>
         </div>
-      </form>
-    </div>
-    <!-- 검색결과 출력 -->
-    <div id="div_books" class="row"></div>
-    <!-- 페이징 기능-->
-    <div class="text-center">
-      <button class="btn btn-primary" id="prev">이전</button>
-      <span id="span_page">1/10</span>
-      <button class="btn btn-primary" id="next">다음</button>
+        </form>
+        </div>
+        <hr />
+        <div id="div_books" class="row"></div>
+        <div class="text-center mt-3" id="div_page">
+          <button class="btn btn-primary" id="prev">이전</button>
+          <span class="mx-3" id="span_page">1/10</span>
+          <button class="btn btn-primary" id="next">다음</button>
+        </div>
+      
     </div>
   </div>
 </div>
-<script type="x-handlebars-template" id="temp_books">
+<script id="temp_books" type="x-handlebars-template">
   <table class="table">
-  {{#each documents}}
-    <tr>
-        <td><img src="{{thumbnail}}" width="50"></td>
-        <td>{{title}}</td>
-        <td>{{price}}</td>
-        <td>{{authors}}</td>
-    </tr>
-  {{/each}}
-  </table>
+      {{#each documents}}
+      <tr>
+          <td><img src="{{chk_thumbnail thumbnail}}" index="{{@index}}" width="50""></td>
+          <td>{{title}}</td>
+          <td>{{fmt_price price}}</td>
+          <td>{{authors}}</td>
+      </tr>
+      {{/each}}
+    </table>
 </script>
 <script>
-  // 폼의 쿼리인풋박스안의 value값을 query 변수에 저장
+  Handlebars.registerHelper("chk_thumbnail", function (thumbnail) {
+    if (!thumbnail) {
+      return "http://via.placeholder.com/120x170";
+    } else {
+      return thumbnail;
+    }
+  });
+  Handlebars.registerHelper("fmt_price", function (price) {
+    if (price)
+      return price.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") + "원";
+  });
   let query = $(frm.query).val();
   let page = 1;
 
   $(frm).on("submit", function (e) {
     e.preventDefault();
-    page = 1;
     query = $(frm.query).val();
-    getBooks();
-  });
-  $("#prev").on("click", function () {
-    page -= 1;
-    getBooks();
+    if (query == "") {
+      alert("검색내용입력하세요!");
+      $(frm.query).focus();
+    } else {
+      page = 1;
+      getList();
+    }
   });
   $("#next").on("click", function () {
-    page += 1;
-    getBooks();
+    page++;
+    getList();
   });
-  getBooks();
-
-  // 도서검색 데이터 불러오기
-  function getBooks() {
+  $("#prev").on("click", function () {
+    page--;
+    getList();
+  });
+  getList();
+  function getList() {
     $.ajax({
       type: "GET",
       url: "https://dapi.kakao.com/v3/search/book?target=authors",
       headers: { Authorization: "KakaoAK a40b5b449d67f0fcf74b4a3bf9e4a072" },
-      data: { query: query, page: page, size: 10 },
+      data: { query: query, page: page, size: 6 },
+      dataType: "json",
       success: function (data) {
-        console.log(data);
-        let temp = Handlebars.compile($("#temp_books").html());
+        const temp = Handlebars.compile($("#temp_books").html());
         $("#div_books").html(temp(data));
+        console.log(data);
+        // getList 발동시 page 변수가 1이면 버튼 비활성화
+        if (page == 1) {
+          $("#prev").attr("disabled", true);
+        } else {
+          $("#prev").attr("disabled", false);
+        }
 
-        let last = Math.ceil(data.meta.pageable_count / 10);
-        $("#span_page").html(page + "/" + last);
-
-        if (page == 1) $("#prev").attr("disabled", true);
-        else $("#prev").attr("disabled", false);
-        if (data.meta.is_end) $("#next").attr("disabled", true);
-        else $("#next").attr("disabled", false);
+        if (data.meta.is_end) {
+          $("#next").attr("disabled", true);
+        } else {
+          $("#next").attr("disabled", false);
+        }
+        // 페이지 카운트를 계산하기 위한 함수
+        let last = Math.ceil(data.meta.pageable_count / 6);
+        if (data.meta.pageable_count > 0) {
+          $("#div_page").show();
+          $("#span_page").html(page + "/" + last);
+        } else {
+          $("#div_page").hide();
+          $("#div_books").html(
+            `<h1 class='text-center'>'${query}'도서가 존재하지 않습니다.</h1>`
+          );
+        }
       },
     });
   }
