--- a/web/views/footer.ejs
+++ b/web/views/footer.ejs
@@ -1,9 +1,8 @@
-<!-- Footer -->
-<footer class="container mt-4">
-  <div class="row text-center">
-    <div class="col">
-      <hr />
-      <h4>Copyright 2023. Minjun Kim, Inha University. All Rights Reserved.</h4>
-    </div>
+<div class="row my-5">
+  <div class="col">
+    <hr />
+    <h5 class="text-center">
+      Copyright 2023. 인하대학교 김민준 All rights reserved.
+    </h5>
   </div>
-</footer>
+</div>
