--- a/web/views/header.ejs
+++ b/web/views/header.ejs
@@ -1,7 +1,6 @@
-<!-- Header -->
-<div class="container mt-4">
-  <div class="text-center">
-    <img src="/images/header01.png" width="100%" />
+<div class="row">
+  <div class="col">
+    <img src="/images/header01.png" width="100%" id="img_header" />
     <%-include("menu.ejs")%>
   </div>
 </div>
