--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -6,31 +6,25 @@
     <%= title %>
   </title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Web Page</title>
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.1/handlebars.js"></script>
-
-  <!-- Bootstrap CSS CDN Link -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
-</head>
-
-<body class="body-bg">
-  <div class="container">
-    <%-include('header.ejs') %> <%-include(pageName) %>
-        <%-include('footer.ejs') %>
-  </div>
-  <!-- 
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p> -->
-  <!-- Bootstrap JavaScript CDN Links (Popper.js and jQuery are required) -->
+  <!--bundle.min.js가 모달 창 띄워주는 애-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.1/handlebars.js"></script>
+  <!-- Bootstrap CSS CDN Link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+  <!-- Bootstrap icon CDN Link -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+</head>
+
+<body>
+  <div class="conatiner">
+    <%-include("header.ejs")%> <%-include(pageName)%>
+        <%-include("footer.ejs")%>
+  </div>
 </body>
 
 </html>
