--- a/web/views/menu.ejs
+++ b/web/views/menu.ejs
@@ -34,6 +34,11 @@
             >즐겨찾기</a
           >
         </li>
+        <li class="nav-item" id="favorite" style="display: none">
+          <a class="nav-link active" aria-current="page" href="/posts"
+            >게시판</a
+          >
+        </li>
       </ul>
       <ul class="navbar-nav d-flex">
         <li class="nav-item" id="login">
