--- a/web/views/posts/read.ejs
+++ b/web/views/posts/read.ejs
@@ -1,34 +1,59 @@
 <div class="my-5">
-    <h1 class="text-center mb-5">게시글정보</h1>
-    <div id="div_post"></div>
+  <h1 class="text-center mb-5">게시글정보</h1>
+  <div>
+    <button id="btn-update" class="btn btn-primary btn-sm mb-3">수정</button>
+    <button id="btn-delete" class="btn btn-danger btn-sm mb-3">삭제</button>
+  </div>
+  <div id="div_post"></div>
+  <%-include("comments.ejs")%>
 </div>
 <script id="temp_post" type="x-handlebars-templates">
-    <div class="card">
-        <div calss="card-body">
-            <h5>{{title}}</h5>
-            <hr>
-            <div>{{body}}</div>
-        </div>
-        <div class="card-footer">
-            <small>작성자: {{email}}</small>
-            <small>작성일: {{date}}</small>
-        </div>
-    </div>
+  <div class="card">
+      <div calss="card-body">
+          <h5>{{title}}</h5>
+          <hr>
+          <div>{{body}}</div>
+      </div>
+      <div class="card-footer">
+          <small>작성자: {{email}}</small>
+          <small>작성일: {{date}}</small>
+      </div>
+  </div>
 </script>
 <script type="module">
-    import { app } from "/javascripts/firebaseInit.js";
-    import {
-        getFirestore,
-        setDoc,
-        doc,
-        getDoc,
-    } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
-    const db = getFirestore(app);
-    const uid = sessionStorage.getItem("uid");
-    const email = sessionStorage.getItem("email");
-    const id = "<%=id%>"
-    const snapshot=await getDoc(doc(db, `posts/${id}`));
-    // console.log(snapshot.data());/
-    const temp = Handlebars.compile($("#temp_post").html());
-    $("#div_post").html(temp(snapshot.data()));
+  import { app } from "/javascripts/firebaseInit.js";
+  import {
+    getFirestore,
+    setDoc,
+    doc,
+    getDoc,
+    deleteDoc,
+  } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
+  const db = getFirestore(app);
+  const uid = sessionStorage.getItem("uid");
+  const email = sessionStorage.getItem("email");
+
+  const id = "<%=id%>";
+  const snapshot = await getDoc(doc(db, `posts/${id}`));
+  // console.log(snapshot.data());/
+
+  const temp = Handlebars.compile($("#temp_post").html());
+  $("#div_post").html(temp(snapshot.data()));
+  const user = snapshot.data();
+  if (sessionStorage.getItem("email") != user.email) {
+    $("#btn-group").hide();
+  }
+
+  $("#btn-delete").on("click", async function () {
+    if (confirm(`${id}번 게시글을 삭제하시겠습니까?`)) {
+      //게시글삭제
+      await deleteDoc(doc(db, `posts/${id}`));
+      location.href = "/posts";
+    }
+  });
+
+  $("#btn-update").on("click", function (req, res) {
+    // location.href = "/posts/update/" + id;
+    location.href = `/posts/update?id=${id}`;
+  });
 </script>
